changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget2/stats-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget2/stats-widget2.component.html
@@ -31,7 +31,7 @@
         <select class="form-control" formControlName="selectedCorp" required>
           <option value="">All</option>
           <option *ngFor="let data of corporateList" [value]="data.fuelDealerId">
-            {{data.companyName}}
+            {{data.companyName}} - {{ data.FuelVeelsId }}
           </option>
         </select>
       </div>
