--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget7/stats-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget7/stats-widget7.component.html
@@ -29,6 +29,7 @@
         formcontrolName="dealer" (change)="getActivityCountByDealer($event)">
       <datalist id="activityCountDealers">
         <option *ngFor="let data of activityCountDealers" [value]="data.companyName">
+            {{ data.FuelVeelsId }}
       </datalist>
     </div>
     <div class="col-md-4"></div>
