--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget11/tables-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget11/tables-widget11.component.html
@@ -9,6 +9,7 @@
             (change)="getDetailsByCustomerMapName($event)">
           <datalist id="dealerList">
             <option *ngFor="let data of dealerList" [value]="data.companyName">
+            {{ data.FuelVeelsId }}
           </datalist>
         </span>
       </div>
