--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget27/tables-widget27.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget27/tables-widget27.component.html
@@ -12,6 +12,7 @@
                                     placeholder="Select Pump Name" (change)="getDealerId($event)">
                                 <datalist id="allDealerList">
                                     <option *ngFor="let data of allDealerList" [value]="data.companyName">
+                                        {{ data.FuelVeelsId }}
                                 </datalist>
                             </div>
                             <div class="col-auto">
