--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget28/tables-widget28.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget28/tables-widget28.component.html
@@ -12,6 +12,7 @@
                                     (blur)=getDealerId($event)>
                                 <datalist id="allCorporateList">
                                     <option *ngFor="let data of allDealerList" [value]="data.companyName">
+                                        {{ data.FuelVeelsId }}
                                 </datalist>
                             </div>
 
