--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget12/tables-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget12/tables-widget12.component.html
@@ -10,6 +10,7 @@
                         (change)="getDetailsByCustomerMapName($event)">
                     <datalist id="dealerList">
                         <option *ngFor="let data of dealerList" [value]="data.companyName">
+                            {{ data.FuelVeelsId }}
                     </datalist>
                 </span>
             </div>
