--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget6/tables-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget6/tables-widget6.component.html
@@ -8,6 +8,7 @@
           (change)="getDetailsByCustomerMapName($event)">
         <datalist id="dealerList">
           <option *ngFor="let data of dealerList" [value]="data.companyName">
+            {{ data.FuelVeelsId }}
         </datalist>
       </span>
     </div>
