--- a/src/app/pages/delete-modal/delete-dsr/delete-dsr.component.html
+++ b/src/app/pages/delete-modal/delete-dsr/delete-dsr.component.html
@@ -11,6 +11,7 @@
                                     placeholder="Select Pump Name" (change)="getDealerId($event)">
                                 <datalist id="allDealerList">
                                     <option *ngFor="let data of allDealerList" [value]="data.companyName">
+                                        {{ data.FuelVeelsId }}
                                 </datalist>
                             </div>
                         </div>
