changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget3/tables-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget3/tables-widget3.component.html
@@ -149,9 +149,9 @@
             <span *ngIf="data.accessGroupId == '14'">MANAGER</span> -->
 
             <div [ngSwitch]="data.accessGroupId">
-                <div *ngSwitchCase="'12'"> OWNER </div>
-                <div *ngSwitchCase="'13'"> OPERATOR </div>
-                <div *ngSwitchCase="'14'"> MANAGER </div>
+                <div *ngSwitchCase="12"> OWNER </div>
+                <div *ngSwitchCase="13"> OPERATOR </div>
+                <div *ngSwitchCase="14"> MANAGER </div>
                 <div *ngSwitchDefault> - </div>
             </div>
           </td>
