--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget8/tiles-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget8/tiles-widget8.component.html
@@ -143,7 +143,7 @@
                 <button type="submit" class="btn btn-success" (click)="submitTerminal()">Add</button>
               </div>&nbsp;&nbsp;
               <div class="col-md-2">
-                <button type="submit" class="btn btn-secondary" (click)="d('Cross click')">Cancel</button>
+                <button type="submit" class="btn btn-secondary" (click)="clearAll()">Cancel</button>
               </div>
             </div>
           </form>
