--- a/src/app/_metronic/partials/layout/modals/modal4/modal4.component.html
+++ b/src/app/_metronic/partials/layout/modals/modal4/modal4.component.html
@@ -98,7 +98,7 @@
         </button>
       </div>
       <div class="col-auto">
-        <button type="button" class="btn btn-danger" (click)="close()">
+        <button type="button" class="btn btn-danger" (click)="clearAll()">
           Cancel
         </button>
       </div>
