--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget1/lists-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget1/lists-widget1.component.html
@@ -299,7 +299,7 @@
       <button type="submit" class="btn btn-primary" (click)="submitByDealerForLubeTax()">Submit</button>
     </div>&nbsp;&nbsp;
     <div class="col-md-2">
-      <button type="submit" class="btn btn-secondary">Cancel</button>
+      <button type="submit" class="btn btn-secondary" (click)="clear()">Cancel</button>
     </div>
   </div>
 
