--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget4/mixed-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget4/mixed-widget4.component.html
@@ -131,9 +131,9 @@
                           <option value="NET BANKING">NET BANKING</option>
                           <option value="IMPS/NEFT/RTGS">IMPS/NEFT/RTGS</option>
                           <option value="POS">POS/DIGITAL</option>
-                          <option *ngFor="let data of fuelTerminalDetails" [value]="data.terminalName">
+                          <!-- <option *ngFor="let data of fuelTerminalDetails" [value]="data.terminalName">
                             {{data.terminalName}}
-                          </option>
+                          </option> -->
                         </select>
                       </span>
 
