changes commit by Tejaswini

--- a/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget1/pump-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget1/pump-tables-widget1.component.html
@@ -34,7 +34,7 @@
                   </div>
                   <div class="col-md-4">
                     <input class="form-control" placeholder="DD-MM-YYYY" name="startDate" (click)="endDate.toggle()"
-                      onkeydown="return false" (blur)="checkalidation2()" formControlName="invoiceDate" ngbDatepicker
+                      onkeydown="return false" formControlName="invoiceDate" ngbDatepicker
                       #endDate="ngbDatepicker">
                   </div>
                 </div> <br>
