--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget12/charts-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget12/charts-widget12.component.html
@@ -27,7 +27,7 @@
 
                   <ng-template #t let-date let-focused="focused">
                     <span class="custom-day" [class.focused]="focused" [class.range]="isRange(date)"
-                      [class.faded]="isHovered(date) || isInside(date)" (mouseenter)="hoveredDate = date">
+                      [class.faded]="isHovered(date) || isInside(date)" (mouseenter)="hoveredDate = date" (mouseleave)="hoveredDate = null">
                       {{ date.day }}
                     </span>
                   </ng-template>
