changes commit by Tejaswini

--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget2/lists-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget2/lists-widget2.component.html
@@ -169,7 +169,7 @@
                     <td style="text-align: center;"> {{data.fuelcreditHsnSacNumber}}</td>
                     <td style="text-align: center;"> {{data.hostPhone}} </td>
                     <td *ngIf="accessGroup == '12' " style="text-align: center;">
-                      <!-- {{ firstName1 }} -->
+                      {{ firstName1 }}
                     </td>
                     <td>&nbsp;</td>
                     <td>&nbsp;</td>
