changes commit by Tejaswini

--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget14/tiles-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget14/tiles-widget14.component.html
@@ -91,10 +91,10 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DT
                             </tr>
                             <tr style="text-align: center;">
                                 <td style="width: 40%;border: 1px solid black;">
-                                    <b> {{debitSum}} </b>
+                                    <b> {{debitSum | number: '1.2-2'}} </b>
                                 </td>
                                 <td style="width: 40%;border: 1px solid black;">
-                                    <b> {{creditSum}} </b>
+                                    <b> {{creditSum | number: '1.2-2'}} </b>
                                 </td>
 
                             </tr>
