changes commit by Tejaswini

--- a/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget5/pump-tables-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget5/pump-tables-widget5.component.html
@@ -339,9 +339,9 @@
                                                                 </td>
 
                                                                 <td style="text-align: left;">
-                                                                    {{data.transactionAmountPrevious}}</td>
+                                                                    {{data.transactionAmountPrevious | number: '1.2-2'}}</td>
                                                                 <td style="text-align: left;">
-                                                                    {{data.transactionAmountCurrent}}</td>
+                                                                    {{data.transactionAmountCurrent | number: '1.2-2'}}</td>
                                                             </tr>
 
                                                         </tbody>
